--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 nalgebra = "0.31.3"
+ndarray={version="0.15.6",features=["rayon"]}
 num="0.4"
 rand="0.8.5"
 clap={version="4.0.26",features=["derive"]}
