--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 
 [dependencies]
 nalgebra = "0.31.3"
-ndarray={version="0.15.6",features=["rayon"]}
+#ndarray={version="0.15.6",features=["rayon"]}
 num="0.4"
 rand={version="0.8.5",features=["alloc"]}
 clap={version="4.0.26",features=["derive"]}
@@ -18,4 +18,4 @@ rayon="1.6.0"
 atomic_float = "0.1.0"
 once_cell="1.16.0"
 bit-vec="0.6.3"
-dashmap="5.4.0"
+dashmap={version="5.4.0", features=["rayon"]}
